# ComLock

./: .gitignore  Features.md  Implementation-plan.md  Infrastructure.md  README.md  Rust Implementation of KEM Braid.md  UX Design.md
.github/workflows/: release.yml
Documentation/: PRD.md
comlock-app/: package-lock.json  package.json
comlock-app/scripts/: audit.ps1
comlock-app/src/: App.css  App.tsx
comlock-app/src-tauri/: Cargo.toml  tauri.conf.json
comlock-app/src-tauri/src/: contacts.rs  decoy.rs  lib.rs  main.rs  security.rs  storage.rs
comlock-app/src-tauri/tests/: pentest_memory.rs  pentest_storage.rs  pentest_timing.rs
comlock-app/src/components/: ContactList.tsx  InviteFlow.tsx  PinEntry.css  PinEntry.tsx  QRDisplay.tsx  QRScanner.tsx  SecuritySettings.css  SecuritySettings.tsx  index.ts
comlock-crypto/: Cargo.toml  flake.nix
comlock-crypto/src/: fragment.rs  header.rs  lib.rs  ratchet.rs
comlock-landing/: next.config.mjs  package-lock.json  package.json
comlock-landing/app/: globals.css  layout.tsx  page.tsx
comlock-landing/components/: feature-grid.tsx  footer.tsx  hero-terminal.tsx  release-badge.tsx
comlock-landing/lib/: github.ts
comlock-transport/: Cargo.toml
comlock-transport/src/: cover.rs  katzenpost.rs  lib.rs  mixnet.rs  sphinx.rs
