[package]
name = "comlock-crypto"
version = "0.1.0"
edition = "2024"
description = "Hybrid Post-Quantum cryptographic primitives for Project ComLock"
license = "MIT OR Apache-2.0"
repository = "https://github.com/comlock/comlock-crypto"
keywords = ["cryptography", "post-quantum", "kyber", "x25519", "mixnet"]
categories = ["cryptography", "no-std"]

[lib]
name = "comlock_crypto"
path = "src/lib.rs"

[dependencies]
# Post-Quantum KEM (ML-KEM-1024 / Kyber)
pqc_kyber = { version = "0.7", features = ["kyber1024"] }

# Classical ECDH (X25519)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Key Derivation
hkdf = "0.12"
sha2 = "0.10"

# Authenticated Encryption
aes-gcm-siv = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Cryptographic RNG
rand = "0.8"
rand_core = "0.6"

# Error handling
thiserror = "1.0"

# Constant-time operations
subtle = "2.5"

[dev-dependencies]
# Testing utilities
hex = "0.4"

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
