[package]
name = "comlock-transport"
version = "0.1.0"
edition = "2021"
description = "Mixnet transport layer for Project ComLock - Sphinx packets and Loopix client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/comlock/comlock-transport"
keywords = ["mixnet", "sphinx", "loopix", "anonymity", "privacy"]
categories = ["network-programming", "cryptography"]

[lib]
name = "comlock_transport"
path = "src/lib.rs"

[dependencies]
# Local crypto crate
comlock-crypto = { path = "../comlock-crypto" }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros", "net"] }

# Cryptographic primitives
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Random number generation
rand = "0.8"
rand_distr = "0.4"  # For Poisson distribution

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
bytes = "1.0"

# Katzenpost mixnet support (TCP protocol implementation)
# Note: Using custom TCP client instead of katzenpost_thin_client due to Windows compatibility

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
