[package]
name = "comlock-app"
version = "0.1.0"
description = "ComLock - Maximum Secure Communication"
authors = ["ComLock Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comlock_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ComLock crypto crates
comlock-crypto = { path = "../../comlock-crypto" }
comlock-transport = { path = "../../comlock-transport" }

# Async runtime for transport layer
tokio = { version = "1.0", features = ["rt", "sync"] }

# Error handling
thiserror = "1.0"

# Hex encoding for API
hex = "0.4"

# SHA2 for identity hashing
sha2 = "0.10"

# Random number generation
rand = "0.8"

# Base64 encoding for QR payloads
base64 = "0.22"

# Secure memory zeroization
zeroize = { version = "1.8", features = ["derive"] }

# AES-GCM encryption for secure storage
aes-gcm = "0.10"

# Production crypto (Phase 1)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
bip39 = "2.0"
argon2 = "0.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Post-quantum cryptography (ML-KEM-1024/Kyber)
ml-kem = "0.2"
